--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <title>quiCKmailnk Generator - Create Mailto Links Easily</title>
+    <meta name="description" content="quiCKmailnk Generator is an easy-to-use tool for creating mailto links with pre-filled recipient, subject, and body. Enhance user experience and streamline email communication.">
+    <meta name="keywords" content="quiCKmailnk Generator, mailto link generator, email link generator, create mailto links">
+    <meta name="author" content="Cüneyt Kaya">
+    <link rel="canonical" href="https://kayacuneyt.com">
+    <!-- Open Graph -->
+    <meta property="og:title" content="quiCKmailnk Generator - Create Mailto Links Easily">
+    <meta property="og:description" content="quiCKmailnk Generator is an easy-to-use tool for creating mailto links with pre-filled recipient, subject, and body. Enhance user experience and streamline email communication.">
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png">
+    <meta property="og:url" content="https://kayacuneyt.com">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="quiCKmailnk Generator - Create Mailto Links Easily">
+    <meta name="twitter:description" content="quiCKmailnk Generator is an easy-to-use tool for creating mailto links with pre-filled recipient, subject, and body. Enhance user experience and streamline email communication.">
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png">
+    <meta name="twitter:site" content="@cueneytkayawebd"> 
+    
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>quiCKmailink Mail Link Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +57,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="script.js"></script>
   </body>
 </html>
